revised: startup: suppress warnings (jython, javax.swing, javascript) revised: startup: use the same Java version for internal detach